<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/naranja"
    tools:context=".Register">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="339dp"
        android:layout_height="159dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/a3f9d7db9ef99893e63623336c1fa1b0" />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="16dp"
        android:background="@color/verdeAqua"
        android:backgroundTint="@color/verdeAqua"
        android:hint="@string/Nombre"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="8dp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextNombre"
        android:layout_marginTop="16dp"
        android:background="@color/verdeAqua"
        android:hint="@string/Correo"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="8dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextEmail"
        android:layout_marginTop="16dp"
        android:background="@color/verdeAqua"
        android:hint="@string/Contrasena"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="8dp" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPassword"
        android:layout_marginTop="24dp"
        android:text="@string/Registrarse"
        android:backgroundTint="@color/black"
        android:textAllCaps="false"
        android:textSize="16sp" />

</RelativeLayout>
